--- a/base_theme.breakpoints.yml
+++ b/base_theme.breakpoints.yml
@@ -1,18 +1,24 @@
+base_theme.mobile:
+  label: mobile
+  mediaQuery: 'screen and (max-width: 479px)'
+  weight: 0
+  multipliers:
+    - 1x
 base_theme.tablet:
   label: tablet
-  mediaQuery: '(min-width: 768px) and (max-width: 1023px)'
-  weight: 0
+  mediaQuery: 'screen and (min-width: 480px)'
+  weight: 1
   multipliers:
     - 1x
 base_theme.desktop:
   label: desktop
-  mediaQuery: '(min-width: 1024px) and (max-width: 1280px)'
-  weight: 1
+  mediaQuery: 'screen and (min-width: 960px)'
+  weight: 2
   multipliers:
     - 1x
 base_theme.large:
   label: large
-  mediaQuery: '(min-width: 1281px)'
-  weight: 2
+  mediaQuery: 'screen and (min-width: 1280px)'
+  weight: 3
   multipliers:
     - 1x
