--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "base_theme",
   "version": "0.0.1",
-  "homepage": "http://.sla.devs.pessac.systonic.fr/",
   "author": "",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
@@ -11,12 +10,12 @@
     "watch": "latest"
   },
   "scripts": {
-    "build:css": "npm run css:clean && npm run css:breakpoint && npm run css:scss && npm run css:autoprefix",
-    "build": "npm run build:css",
+    "build:css": "npm run css:clean && npm run css:scss && npm run css:autoprefix",
+    "build": "npm run css:breakpoint && npm run build:css",
     "css:autoprefix": "postcss --use autoprefixer --dir css css/*.css",
     "css:breakpoint": "node js/breakpoints.js",
     "css:clean": "find css/ -maxdepth 1 ! -name 'custom*.css' -type f -exec rm -f {} +",
     "css:scss": "node-sass --output-style compressed --source-map true --output css/ scss/",
-    "watch": "watch 'npm run build' ./scss"
+    "watch": "watch 'npm run build:css' ./scss"
   }
 }
